Añadimos los test completos para suma, resta, multiplicación y división.